GGB-1934 prevent tooltip flickering
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55115 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/snackbar.scss
@@ -1,24 +1,20 @@
 @import 'colors';
 
 .snackbar {
-		display: block;
 		min-width: 288px;
 		max-width: 568px;
 		height: 80px; /* 48px for single line */
 		border-radius: 2px;
 		z-index: 1000;
 		position: absolute;
-		font-family: geogebra-sans-serif, Arial Unicode MS, Arial, sans-serif;
 		background-color: $snackbar-background;
-		color: $white;
 		
 		td {
-		vertical-align: middle !important;
+			vertical-align: middle !important;
 		}
 	
 	.infoText {
 		padding-left: 24px;
-		display: inline-block;
 		cursor: default;
 		color: $white;
 	}
